# amux

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: agents.rs  cli.rs  error.rs  lib.rs  main.rs  tmux.rs
