[package]
name = "amux"
version = "0.1.3"
edition = "2021"
description = "tmux session manager for local code agents"
license = "MIT"
repository = "https://github.com/hewigovens/amux"
homepage = "https://github.com/hewigovens/amux"
readme = "README.md"
keywords = ["tmux", "cli", "agent", "automation"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
shell-words = "1.1.0"

[[bin]]
name = "amux"
path = "src/main.rs"

[lib]
name = "amux"
path = "src/lib.rs"
